did some style changes

--- a/Among Us api/index.html
+++ b/Among Us api/index.html
@@ -20,45 +20,45 @@
         <p class="note"></p>
     </section>
     <ul>
-        <li>GodFather</li>
-        <li>Mafioso</li>
-        <li>Janitor</li>
-        <li>Morphling</li>
-        <li>Camouflager</li>
-        <li>Vampire</li>
-        <li>Eraser</li>
-        <li>Trickster</li>
-        <li>Cleaner</li>
-        <li>Warlock</li>
-        <li>Bounty-Hunter</li>
-        <li>Witch</li>
-        <li>Ninja</li>
-        <li>Guesser</li>
-        <li>Jester</li>
         <li>Arsonist</li>
-        <li>Jackal</li>
-        <li>Sidekick</li>
-        <li>Vulture</li>
-        <li>Lawyer</li>
-        <li>Pursuer</li>
-        <li>Shifter</li>
-        <li>Mayor</li>
-        <li>Engineer</li>
-        <li>Sheriff</li>
+        <li>Bounty Hunter</li>
+        <li>Camouflager</li>
+        <li>Cleaner</li>
         <li>Deputy</li>
-        <li>Lighter</li>
         <li>Detective</li>
-        <li>Time Master</li>
-        <li>Medic</li>
-        <li>Swapper</li>
-        <li>Seer</li>
+        <li>Engineer</li>
+        <li>Eraser</li>
+        <li>Godfather</li>
+        <li>Guesser</li>
         <li>Hacker</li>
-        <li>Tracker</li>
+        <li>Jackal</li>
+        <li>Janitor</li>
+        <li>Jester</li>
+        <li>Lawyer</li>
+        <li>Lighter</li>
+        <li>Mafioso</li>
+        <li>Mayor</li>
+        <li>Medic</li>
+        <li>Medium</li>
+        <li>Morphling</li>
+        <li>Ninja</li>
+        <li>Portalmaker</li>
+        <li>Pursuer</li>
+        <li>Security Guard</li>
+        <li>Seer</li>
+        <li>Sheriff</li>
+        <li>Shifter</li>
+        <li>Sidekick</li>
         <li>Snitch</li>
         <li>Spy</li>
-        <li>Portalmaker</li>
-        <li>Security Guard</li>
-        <li>Medium</li>
+        <li>Swapper</li>
+        <li>Time Master</li>
+        <li>Tracker</li>
+        <li>Trickster</li>
+        <li>Vampire</li>
+        <li>Vulture</li>
+        <li>Warlock</li>
+        <li>Witch</li>
     </ul>
     <script src="main.js"></script>
 </body>
